# dataagent

./: .env.example  .gitignore  README.md  README_zh.md  datagallery_profile_README.md  docker-compose.yml  pyproject.toml  setup.py
dataagent/: __init__.py  __main__.py
dataagent/a2a_server/: __init__.py  agent_card.py  agent_executor.py  server.py  task_store.py
dataagent/actions/environment/: __init__.py  compound_env.py  env.py  env_config.py
dataagent/actions/gym/: __init__.py  ontology_env.py
dataagent/actions/perceptor/: perceptor_atomic.py  perceptor_utils.py
dataagent/actions/resources/: __init__.py  bootstrap.py  mcp_adapter.py  sandbox_ops.py  sandbox_runner.py
dataagent/actions/tools/: __init__.py  a2a.py  backfill.py  concurrency.py  context.py  local.py  mcp.py  mcp_examples.py  schema_validator.py  search_metric_instance.py  search_udf_functions.py  utils.py
dataagent/agents/document_recall/: document_recall_agent.yaml  tools.py
dataagent/agents/galatea/: __init__.py  agent.py
dataagent/agents/metadata_recall/: metadata_recall_agent.yaml
dataagent/agents/nl2sql/: __init__.py  agent.py  errors.py  nl2sql_agent.yaml  udn.yaml  zdy.yaml  zhongduanyun.yaml
dataagent/agents/semantic_service/: semantic_service_test_agent.yaml
dataagent/common_utils/: outbound_tls.py  storer_utils.py
dataagent/common_utils/knowledge_base/: knowledge_base.py  memory.py  metadata_management.py  tool_management.py  utils_common.py  utils_inference.py  utils_knowledgebase.py  utils_memory.py  utils_metadata.py
dataagent/config/: __init__.py  config_manager.py
dataagent/core/: __init__.py  interface.py
dataagent/core/agents/: __init__.py  registry.py  service.py  subagent_config.py  subagent_session.py  subagent_subprocess_runner.py
dataagent/core/cbb/: __init__.py  agent_env.py  base_agent.py  base_hook.py  base_node.py  base_router.py  base_state.py  galatea_base_agent.py  module.py  runtime.py  runtime_env.py
dataagent/core/context/: context.py  contextIR.py  context_ir.py  context_persistence.py  context_profiling.py  context_state.py  context_trajectory.py  context_viz.py  flex_context_formatting.py  message_history.py  prompt_template.py  todolist_manager.py  trajectory_editor.py  trajectory_navigator.py  util.py  utils_context_filesystem.py  utils_context_storage.py  utils_context_trajectory.py
dataagent/core/deep_agent/: __init__.py  adapter.py  checkpoint.py  model_builder.py  plan.py  prompt_builder.py  spec.py  tool_builder.py
dataagent/core/flex/: agent.py  flex_default_configs.yaml  flex_runtime_from_config.py
dataagent/core/jobs/: __init__.py  envelope.py  file_store.py  models.py  service.py
dataagent/core/managers/: galatea_action_manager.py
dataagent/examples/: deep_analyze.yaml  default_configs.yaml  example_jiuwen.yaml  quickstart.yaml  test_ddl_hook.yaml  test_example_suite.yaml
dataagent/governance/: __init__.py  config.py  tool_hooks.py
dataagent/resources/: __init__.py
dataagent/suite/: __init__.py  activation.py  allow_paths.py  discovery.py  suite_layer.py  types.py  validation.py
dataagent/utils/: builder_utils.py  compression_utils.py  constants.py  dag_utils.py  env_file_loader.py  env_utils.py  fix_md_image_path.py  formatting_utils.py  import_utils.py  info_utils.py  messages_utils.py  parsing_utils.py  performance.py  runtime_paths.py
docker/postgres-init/: init-database.sql
docs/: main_agent_cache_optimization_design.md  mkdocs.yml  mkdocs部署说明.md  subagent_token_cache_aggregation_design.md
docs/en/: index.md
docs/en/api_doc/: PythonSDK.md  (+2 more)
docs/zh/: index.md
nl2sql/: config.py  requirements.txt  step1_run_preprocess.md  step2_run_schema_linker.md  step3b_run_nl2sql_single_combination.md  step4a_sft_selector.md
nl2sql/client/: __init__.py  llm_adapter.py  llm_client.py  local_artifact_client.py
nl2sql/common/: __init__.py  atomic_io.py  cot_recorder.py  data_loader.py  data_types.py  log_aggregator.py  log_utils.py  prompt_utils.py  runner_utils.py
nl2sql/few_shot/: __init__.py  build_train_cache.py  generate_from_cache.py
nl2sql/generator/: __init__.py  base.py  dc_generator.py  icl_generator.py  prompts.py  skeleton_generator.py  sql_generator.py
nl2sql/preprocess/: __init__.py
nl2sql/runner/: __init__.py  step1_run_preprocess.py  step2_run_schema_linker.py  step3b_run_nl2sql_single_combination.py  step4_evaluate.py  step4a_sft_runner.py
nl2sql/schema_linker/: data_types.py  prompt_factory.py  prompt_templates.py  schema_utils.py  step2a_load_dataset.py  step2b_keywords_and_retrieval.py  step2c_column_match_linker.py  step2d_llm_direct_linker.py  step2e_value_match_linker.py  step2f_value_retrieval_linker.py  step2g_sql_reversed_linker.py  step2h_join_closure_linker.py  step2i_format_output.py  utils.py
nl2sql/selector/: __init__.py  br_selection.py  prompts.py  sql_selector.py
nl2sql/sft_selector/: __init__.py  pipeline.py  scorer.py  user_prompt.md
nl2sql/sql_evaluator/: __init__.py  bird_evaluation.py  execute_sql.py  sql_evaluator.py
nl2sql/validator/: __init__.py  base.py  execution_outcome_checker.py  prompts.py  sql_compliance_checker.py  sql_validator.py
scripts/: clean_ext.py  test_mcp_resource_e2e.py  ut_coverage.py
scripts/analyzer/: .gitignore  README.md  __init__.py  __main__.py  base.py  cli.py  logs.py  performance.py  report.py  scope.py  subagents.py  time.py  token.py  trajectory.py
tests/benchmark/: test_nl2sql_benchmark.py
tests/e2e/: test_arithmetic.py  test_changping.py  test_ecommerce.py  test_icbc.py  test_multiturn.py  test_nl2sql.py  test_nl2sql_flex_subagent.py  test_semantic_service.py  test_switch_env.py
tests/ut/: test_backfill.py  test_cli_config_dryrun.py  test_cli_logging_init.py  test_compression_infer.py  test_concurrency.py  test_error_classification.py  test_executor_error_classify.py  test_input_validation_security.py  test_layered_context_compression.py  test_performance.py  test_performance_integration.py  test_planner_prompt_builder.py  test_schema_validator.py  test_subagent_perf_aggregation.py  test_swarm_worker_infrastructure.py
(+741 files in other folders)
