[build-system]
requires = ["setuptools>=67.6.1,<81", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataagent"
version = "0.1.0"
description = "DataAgent - A powerful multi-modal Data Agent workflow template framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ---- DataAgent core ----
    "a2a-sdk>=1.0.2",
    "protobuf==6.33.5",
    "jinja2>=3.1.0",
    "langchain==1.3.2",
    "loguru==0.7.3",
    "networkx==3.4.2",
    "mcp==1.26.0",
    "pandas==2.3.2",
    "psutil==6.0.0",
    "pydantic==2.12.5",
    "PyYAML==6.0.2",
    "jieba>=0.42.1",
    # ---- tools/skills ----
    "matplotlib==3.10.1",
    # ---- 数据库驱动（核心 Agent / 知识库 / NL2SQL 等共用） ----
    "pymysql==1.1.2",
    "sqlalchemy==2.0.49",
    "uvicorn==0.34.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dataagent*"]
namespaces = true

[project.optional-dependencies]

all = [
    "dataagent[server]",
    "dataagent[nl2sql]",
    "dataagent[data-analysis]",
    "dataagent[a2a-server]",
    "dataagent[trajectory_graph]",
    "dataagent[tool]",
]

data-analysis = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.5.0",
    "requests>=2.32.0",
]

server = [
    "fastapi==0.116.1",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.24",
    "cryptography==46.0.7",
    "elasticsearch>=7.17.12,<8",
]
jiuwen = [
    "openjiuwen==0.1.14"
]
mkdoc = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.6.0",
    "mkdocs-static-i18n>=1.2.0",
    "pymdown-extensions>=10.8.0",
]
nl2sql = [
    "sqlglot>=28.1.0",
    "sqlparse>=0.5.5"
]
test = [
    "dataagent[server]",
    "setuptools>=67.6.1,<81",
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.2.0",
    "diff-cover>=7.5",
    "pytest-html==2.1.1",
    "py"
]
a2a-server = [
    "grpcio>=1.60.0",
]
trajectory_graph = [
    "pyvis==0.3.2",
]
tool = [
    "mplfonts>=0.0.11",
    "seaborn>=0.13.2",
]
wps = [
    "openpyxl>=3.1.5",
    "pyvis>=0.3.2",
    "pywin32>=311",
    "scikit-learn>=1.9.0",
]

[tool.setuptools.package-data]
"*" = [
    "*.md",
    "*.yaml",
    "*.json",
    "*.sql",
    "*.sh",
    "*.ttf",
    "*.otf",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "widgetsnbextension>=4.0.14",
    "black",
    "ruff>=0.14.0",
    "pyright>=1.1.394",
    "mypy>=1.18.2",
    "codespell"
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# bio_lab e2e tests are script-style (run via `python tests/e2e/bio_lab/...`),
# not pytest-collectable: they require LLM API keys, fixture DBs, and mock
# servers. Excluding them from default collection avoids:
#   1. RuntimeWarning: coroutine ... was never awaited (async tests missing
#      @pytest.mark.asyncio in strict mode)
#   2. Long-running real LLM calls during `pytest tests/`
# Run them explicitly as scripts: `uv run tests/e2e/bio_lab/test_performance.py`
addopts = "--verbose --color=yes --ignore=tests/e2e/bio_lab"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["dataagent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
[tool.diff-cover]
fail_under = 80
exclude = ["*/dataagent/*", "*/tests/*"]

# Pyright 配置
[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
strict = false
reportLevel = "error"
reportMissingImports = true
reportMissingTypeStubs = "warning"
reportUntypedFunctionDecorator = "warning"
exclude = [
    ".venv",
    "dist",
    "build",
    "tests/mocks"
]

# Radon 配置
[tool.radon.raw]
exclude = "*/tests/*,*/__pycache__/*"

[tool.radon.cc]
min = "C"
exclude = "*/tests/*,*/__pycache__/*"
output-format = "json"

[tool.radon.mi]
exclude = "*/tests/*,*/__pycache__/*"
multi = true
show = true

[tool.codespell]
skip = "*.pdf,*.png,*.jpg,*.min.js,./lib/*"

[tool.uv]
override-dependencies = [
    "httpx==0.28.1",
    "sqlalchemy==2.0.49",
    "pydantic==2.12.5",
    "mcp==1.26.0",
    "uvicorn==0.34.0"
]
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".venv", "dist", "build", "docs", "examples", "scripts", "evaluation/benchmarks/dacomp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008", "E203", "E501", "F401"]

[tool.ruff.lint.mccabe]
max-complexity = 15
